5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1735_2520.log
== TEST (2019-05-09 10:47:12) 
-- CODE:
x=int(input("Digite um numero: "))
g=0
f=0
e=0
w=1
hile(x>g):
	e=(1/(w**2))
	f=f+e
	w=w+1
	g=g+1

s=(f*6)**0.5
print(round(s,6))
-- ERROR:
File "XXXX", line 6
    hile(x>g):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:47:19) 
-- CODE:
x=int(input("Digite um numero: "))
g=0
f=0
e=0
w=1
while(x>g):
	e=(1/(w**2))
	f=f+e
	w=w+1
	g=g+1

s=(f*6)**0.5
print(round(s,6))
-- OUTPUT:
3.139684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:47:29) 
-- CODE:
x=int(input("Digite um numero: "))
g=0
f=0
e=0
w=1
while(x>g):
	e=(1/(w**2))
	f=f+e
	w=w+1
	g=g+1

s=(f*6)**0.5
print(round(s,6))
-- EXECUTION TIME:
0.12432
-- TEST CASE 1:
---- input:
500
---- correct output:
3.139684
---- user output:
3.139684
-- TEST CASE 2:
---- input:
159863
---- correct output:
3.141587
---- user output:
3.141587
-- TEST CASE 3:
---- input:
100
---- correct output:
3.132077
---- user output:
3.132077
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
